# visionary

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  RELEASE.md  SECURITY.md  bridge.py  db.js  electron.js  install.sh  package-lock.json  package.json  pyproject.toml  server.js  sse.js  watchdog.py
.github/: dependabot.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: COMMERCIAL-ROADMAP.md
personalities/: AGENTS.md  IDENTITY.md  MISSION_CONTROL.md  SOUL.md  TEAM.md  VISIONARY.md  org-chart.json
public/: app.js  index.html  manifest.json  styles.css  sw.js
scripts/: ensure-native.js  install-launchd.sh  live-dispatch-test.mjs  make-icns.mjs  stream-smoke.mjs  uninstall-launchd.sh
src/: cleanup.js  cookbook.js  deep-research.js  guardrails.js  mcp.js  rate-limiter.js  review-verdict.js  review.js  scheduler.js
src/runtimes/: index.js  (+5 more)
tests/: review-verdict.test.mjs  smoke.mjs  test_app.py  test_blackboard.py  test_cookbook.py  test_db.py  test_direct.py  test_envelope.py  test_facade.py  test_failover.py  test_guardrails.py  test_mailbox.py  test_migration_8.py  test_migrations.py  test_pubsub.py  test_rate_limiter.py  test_routes_agents.py  test_routes_blackboard.py  test_routes_dispatch.py  test_routes_events.py  test_routes_health.py  test_routes_mailbox.py  test_routes_org.py  test_routes_schedules.py  test_routes_settings.py  test_routes_throttle.py  test_routes_ws.py  test_runtimes_base.py  test_runtimes_claude.py  test_runtimes_openclaw.py  test_settings.py  test_sse.py  test_statements.py
(+91 files in other folders)
